Add some sub-tasks under cpumap use-case
These were moved from my local org tasks.

Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/areas/cpumap.org
+++ b/areas/cpumap.org
@@ -114,10 +114,21 @@ This project demonstrates how this can be solved by using the =MQ= qdisc and
 attaching a qdisc =HTB= on each leaf of =MQ=, and via an eBPF prog make sure
 the customers/services grouping is maintained and hit the same CPU+MQ TXq.
 
+** DONE cpumap: Create script MQ-HTB silo setup
+CLOSED: [2019-02-06 Wed]
+https://github.com/netoptimizer/network-testing/blob/master/tc/tc_mq_htb_setup.sh
+
+** NEXT cpumap: Test cpumap redirect works with MQ-HTB silo setup
+
 ** TODO Create BPF helper for skb_set_queue_mapping
 
 When doing CPUMAP redirect, then the SKB created have no =skb->queue_mapping=
 configured. This could be set by e.g. using TC filter/action =skbedit= (see man
 [[https://www.linux.org/docs/man8/tc-skbedit.html][tc-skbedit(8)]]), but we also want to allow this from TC cls_bpf. Reading
 =queue_mapping= from TC cls_bpf is already possible.
+
+** TODO cpumap: quantify effect of cpumap (currently) don't transfer RX-csum info
+
+Verify csum is recalculated on IP-forward TX path for cpumap redirected
+packets.  Try to asses/measure overhead this cause.
 
