NEXT Implement simple XDP-actions counter and measure
The code example is wrong and can be used for side-channel leaks.

Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/xdp-project.org
+++ b/xdp-project.org
@@ -85,6 +85,9 @@ struct bpf_prog *prog,
  }
 #+end_src
 
+WARNING: Realised above code is subject to speculative execution
+side-channel leaking.
+
 And measure if the performance concerns are real or not. Ilias or Jesper can
 measure this on a slow ARM64 platform (espressobin), as only testing this on
 Intel might lead to the wrong conclusion.
