--- a/xdp-project.org
+++ b/xdp-project.org
@@ -245,6 +245,14 @@ based on =veth= changed from testing generic-XDP into testing native-XDP.
 1. Determine how many and which veth based XDP-selftests are affected
 2. Convert these selftests to test both generic-XDP and native-XDP
 
+** TODO Make more XDP tests using BPF_PROG_TEST_RUN
+
+[[https://twitter.com/bjorntopel/status/1098563282884014080?s=03][Tweet]] by Björn Töpel (@bjorntopel):
+
+Many people aren't aware of the BPF_PROG_TEST_RUN command. It's really neat
+being able to test your XDP programs "offline". The selftests use this a
+lot. Docs: https://t.co/GDd7SfNYng and examples in tools/testing/selftests/bpf/.
+
 * WAIT BTF-based metadata for XDP                                   :WAITING:
 
 Waiting for tracing people to work out the details of BTF.
