Move XDP tutorial at Netdev 0x13 from xdp-project.org to conference.org
Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/conference.org
+++ b/conference.org
@@ -30,3 +30,43 @@ CLOSED: [2019-02-02 Sat]
 Link to talk:
 [[https://fosdem.org/2019/schedule/event/xdp_overview_and_update/][XDP (eXpress Data Path) as a building block for other FOSS projects]]
 
+* TODO XDP tutorial at Netdev 0x13
+
+XDP is an increasingly popular topic and technology.
+XDP builds on top of eBPF.
+
+This hands-on tutorial will provide guidance on
+getting started using XDP+eBPF technology with
+intention to let attendees for later
+leveraging it for your specific use-case.
+
+More details to be posted later.
+
+** DONE NetDev-conf presentation/Tutorial got accepted
+CLOSED: [2019-01-28 Mon 13:00]
+:LOGBOOK:
+- State "DONE"       from "TODO"       [2019-01-28 Mon 13:00]
+:END:
+Title: "XDP hands-on tutorial"
+Subject: [Indico] Abstract Acceptance notification (#48)
+** NEXT Prepare materials for XDP tutorial
+DEADLINE: <2019-03-20 Wed>
+[2019-02-04 Mon 12:33]
+[[notmuch:id:43977d45-857f-87ef-07d5-553868882008@mojatatu.com][Email from Jamal Hadi Salim: XDP tutorial]]
+
+** NEXT NetDev-conf: add abstract under XDP-project
+** NEXT NetDev-conf: create overall plan for tutorial
+** TODO Create github repo for NetDev-conf XDP-tutorial
+We need a github repo that are easier to build than [[https://github.com/netoptimizer/prototype-kernel][prototype-kernel]] github
+repo, as it requires the kernel source tree to build. The hands-on tutorial
+need to have an easier and more confined build-environment.
+
+Related: How do we ensure participants can successfully run XDP at the event?
+
+** NEXT Needs document of best practices
+E.g.:
+
+- Use metadata field for carrying per-packet data
+- Don't replicate kernel state
+
+
