Notes down the git submodule command used for libbpf
Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/conference/NetDevConf2019-0x13/tutorial_notes.org
+++ b/conference/NetDevConf2019-0x13/tutorial_notes.org
@@ -5,3 +5,11 @@
 Create GitHub repo:
  https://github.com/xdp-project/xdp-tutorial
 
+Add libbpf as git submodule
+
+Command used:
+#+begin_example
+git submodule add https://github.com/libbpf/libbpf/ libbpf
+#+end_example
+
+
