tutorial_notes: section for 'git repo for tutorial'
Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/conference/NetDevConf2019-0x13/tutorial_notes.org
+++ b/conference/NetDevConf2019-0x13/tutorial_notes.org
@@ -2,6 +2,8 @@
 #+TITLE: Notes for XDP Hands-On Tutorial
 #+OPTIONS: ^:nil
 
+* git repo for tutorial
+
 Create GitHub repo:
  https://github.com/xdp-project/xdp-tutorial
 
