NetDev-Tutorial: basic03: pinning maps
Add assignment, that I had in a branch from yesterday, but add it manually
as Toke have already modified this doc.

Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/conference/NetDevConf2019-0x13/tutorial_notes.org
+++ b/conference/NetDevConf2019-0x13/tutorial_notes.org
@@ -69,6 +69,23 @@ What participant will learn:
 - learn how to *read* from map from userspace.
 - Learn how to interact with PER-CPU maps from userspace
 
+** basic03: pinning maps
+
+Instructors purpose:
+- Demonstrate that maps can be pinned, which means exported to a BPF-fs
+  mount point.
+
+Provided
+- Solution to basic02
+
+Assignment:
+- Extend basic02, with exporting the counter-map via BPF-map pinning
+- Write a userspace program that open pinned/exported map, and report on
+  counter-stats.
+- Advanced users: Privilege-separation via change ownership of exported
+  map-file (unix chown file-permissions), allowing normal user to run stats
+  program.
+
 ** basic03: reading xdp_rxq_info
 
 Dirname:
