NetDev-Tutorial: fix ref after section assignment rename
In section: packet02: packet rewriting

Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/conference/NetDevConf2019-0x13/tutorial_notes.org
+++ b/conference/NetDevConf2019-0x13/tutorial_notes.org
@@ -136,7 +136,7 @@ Purpose:
 - Show header pop/push
 
 Provided:
-- Packet parsing program from basic04
+- Packet parsing program from packet01
 
 Assignments:
 - Modify packet data to increment source IP number by 1
