xdp-tutorial: Add note about multiple XDP programs to best practices
Signed-off-by: Toke Høiland-Jørgensen <toke@redhat.com>

--- a/conference.org
+++ b/conference.org
@@ -78,5 +78,6 @@ E.g.:
 
 - Use metadata field for carrying per-packet data
 - Don't replicate kernel state
+- How to handle multiple programs on one interface
 
 
