NetDevConf: Add dirmae to basic03: pinning maps
Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/conference/NetDevConf2019-0x13/tutorial_notes.org
+++ b/conference/NetDevConf2019-0x13/tutorial_notes.org
@@ -71,6 +71,9 @@ What participant will learn:
 
 ** basic03: pinning maps
 
+Dirname:
+- basic03-pinning-maps
+
 Instructors purpose:
 - Demonstrate that maps can be pinned, which means exported to a BPF-fs
   mount point.
